Query selector using html and javascript

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <li class="list"> Rabbit </li>
  </ul>
 
- </body background="images/bgcolor.jpg" alx="zoo">
+ </body>
 <style>
     .list{ max-width:800px;
   margin: auto; 
